@@ -1,3 +1,8 @@
+2007-12-01  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* R/aobjects.R (showMeta): Added method for pretty printing a
+	text document's meta data.
+
 2007-11-29  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* R/textdoccol.R (TextDocCol): Better handling of empty
